    LVM.
  * Call prepare_new_labels() before calling create_new_label().
    Depends: partman-partitioning (>= 62)
  * Move get_last_free_partition_infos() out of auto_init_disk() in
    lib/auto-shared.sh.  autopartition has been updated accordingly.
    Based on a patch by Grégory Oestreicher.
    Breaks: partman-auto-lvm (<< 29)

 -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000

partman-auto (80) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Propagate debconf_select() cancel return code in choose_recipe().
  * Correctly handle GOBACK in automatically_partition/some_device/do_option.
    (Closes: #487694)
  * Update to the new debconf_select interface.
    Requires partman-base (>= 124).

  [ Updated translations ]
  * Esperanto (eo.po) by Felipe Castro
	
 -- Otavio Salvador <otavio@debian.org>  Tue, 05 Aug 2008 13:40:40 -0300

partman-auto (79) unstable; urgency=low

  [ Martin Michlmayr ]
  * Use the size values for /boot from the generic recipe for iop32x
    and orion5x since there's no reason to divert from the default.
  * Allow LVM on iop32x and orion5x.
  * Add recipes for ixp4xx that allocate more swap than other recipes
    (for the Linksys NSLU2 which only has 32 MB RAM).
  * ixp4xx: Don't offer lvm by default since it uses many resources.

  [ Frans Pop ]
  * Change default file system for /boot partition from ext3 to ext2.
    As they are relatively small the journal overhead is fairly big and
    because the transaction volume is very low the need for a journal is
    a lot less than on other partitions.

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Finnish (fi.po) by Esko Arajärvi
  * Italian (it.po) by Milo Casagrande
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovak (sk.po) by Ivan Masár
  * Turkish (tr.po) by Mert Dirik

 -- Frans Pop <fjp@debian.org>  Wed, 16 Jul 2008 13:53:09 +0200
