@@ -17,6 +17,9 @@ partman-auto (81) UNRELEASED; urgency=low
     lib/auto-shared.sh.  autopartition has been updated accordingly.
     Based on a patch by Grégory Oestreicher.
     Breaks: partman-auto-lvm (<< 29)
+  * Rename auto_init_disk() to auto_init_disks() as it can now initialize
+    multiple disks at once.  autopartition has been updated accordingly.
+    Breaks: partman-auto-lvm (<< 29)
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000
 
